bad/for_array_over_bool.example_compiler_output
ERROR
[1mbad/for_array_over_bool.lat:3:17: [1;31merror: [0;1mfor cannot iterate over value of non-array type `boolean`[m
	for (int[] x : true) {}
	               [1;32m^[m
